--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-Flask
-Flask-Session
-psycopg2-binary
-SQLAlchemy
-Flask-WTF
-passlib
-flask_login
+requests==2.23.0
+passlib==1.7.2
+Flask==1.1.2
+SQLAlchemy==1.3.17
